menambahkan tampilan daftar mobil dan kofigurasinya di recyle view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.RentalSystem"
         tools:targetApi="31">
         <activity
+            android:name=".VerikasiDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".adapter.DashboardActivity"
             android:exported="false" />
         <activity
