--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RentalSystem"
         tools:targetApi="31">
+        <activity android:name=".intro2Activity" />
+        <activity android:name=".intro3Activity" />
+        <activity android:name=".LoginActivity" />
+
         <activity
             android:name=".FragmentDashboard"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".FragmentDetailBooking"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".VerikasiDetailActivity"
             android:exported="false" />
@@ -26,27 +32,14 @@
             android:exported="false" />
         <activity
             android:name=".model.MenuModel"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".adapter.SewaAdapter"
-            android:exported="false" />
-        <activity
-            android:name=".Sewa"
-            android:exported="false" />
-        <activity
-            android:name=".SewaAdapter"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".intro3Activity"
-            android:exported="false" />
-        <activity
-            android:name=".intro2Activity"
             android:exported="false" />
         <activity
             android:name=".introActivity"
