--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,47 +12,45 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RentalSystem"
         tools:targetApi="31">
-        <activity android:name=".intro2Activity" />
-        <activity android:name=".intro3Activity" />
-        <activity android:name=".LoginActivity" />
 
-        <activity
-            android:name=".FragmentDashboard"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".FragmentDetailBooking"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".VerikasiDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".adapter.DashboardActivity"
-            android:exported="false" />
-        <activity
-            android:name=".model.MenuModel"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".adapter.SewaAdapter"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
+        <!-- 🔥 LAUNCHER (HALAMAN PERTAMA) -->
         <activity
             android:name=".introActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- INTRO SEQUENCE -->
+        <activity
+            android:name=".intro2Activity"
+            android:exported="false" />
+
+        <activity
+            android:name=".intro3Activity"
+            android:exported="false" />
+
+        <!-- AUTH -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
+        <!-- MAIN APP -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <!-- DETAIL / VERIFIKASI -->
+        <activity
+            android:name=".VerikasiDetailActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
