update bottom menu admin login dan user login serta register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
         <activity
             android:name=".introActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
         <!-- INTRO SEQUENCE -->
@@ -35,7 +32,8 @@
         <!-- AUTH -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="false"/>
+
 
         <activity
             android:name=".RegisterActivity"
@@ -43,8 +41,20 @@
 
         <!-- MAIN APP -->
         <activity
+
             android:name=".MainActivity"
             android:exported="false" />
+
+        <activity
+
+            android:name=".DashboardActivity"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <!-- DETAIL / VERIFIKASI -->
         <activity
