update menu profile di user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,12 @@
         <!-- AUTH -->
         <activity
             android:name=".LoginActivity"
-            android:exported="false"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
         <activity
@@ -49,17 +54,9 @@
 
             android:name=".DashboardActivity"
             android:exported="true"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            />
 
-        <!-- DETAIL / VERIFIKASI -->
-        <activity
-            android:name=".VerikasiDetailActivity"
-            android:exported="false" />
+
 
     </application>
 
