midtrans konfigurasi dan booking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- ✅ WAJIB UNTUK MIDTRANS -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,14 +16,16 @@
         android:theme="@style/Theme.RentalSystem"
         tools:targetApi="31">
 
-        <!-- 🔥 LAUNCHER (HALAMAN PERTAMA) -->
+        <!-- MIDTRANS -->
+        <activity
+            android:name=".MidtransPaymentActivity"
+            android:exported="false" />
+
+        <!-- INTRO -->
         <activity
             android:name=".introActivity"
-            android:exported="true">
+            android:exported="true" />
 
-        </activity>
-
-        <!-- INTRO SEQUENCE -->
         <activity
             android:name=".intro2Activity"
             android:exported="false" />
@@ -32,31 +37,27 @@
         <!-- AUTH -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="false" />
 
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
 
-        <!-- MAIN APP -->
+        <!-- MAIN -->
         <activity
-
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
 
         <activity
-
             android:name=".DashboardActivity"
-            android:exported="true"
-            />
-
-
+            android:exported="true" />
 
     </application>
 
